--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,6 @@ site_name: GH-PAGES-TEST
 site_url: https://faco400.github.io/GHPAGES-test/
 
 nav:
-  - Home: index.md
+  - Home: home/home.md
   - About: about/about.md
 
